--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -331,7 +331,7 @@ BEGIN
     PUSHBUTTON      "&Default",IDC_DEFAULT,113,161,45,15
 END
 
-IDD_AUDIOSETTINGS DIALOG DISCARDABLE  0, 0, 170, 250
+IDD_AUDIOSETTINGS DIALOG DISCARDABLE  0, 0, 170, 233
 STYLE DS_SYSMODAL | DS_SETFOREGROUND | DS_3DLOOK | WS_POPUP | WS_VISIBLE | 
     WS_CAPTION | WS_SYSMENU
 CAPTION "Audio-Settings (Analog)"
@@ -360,11 +360,9 @@ BEGIN
                     WS_DISABLED
     CONTROL         "Slider6",IDC_SLIDER6,"msctls_trackbar32",TBS_TOP | 
                     WS_TABSTOP,7,178,152,15
-    CONTROL         "Activate Superbass",IDC_CHECK1,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,32,208,115,12
-    PUSHBUTTON      "Cancel",IDCANCEL,5,228,45,15
-    PUSHBUTTON      "Default",IDC_DEFAULT,62,228,45,15
-    DEFPUSHBUTTON   "OK",IDOK,118,228,45,15
+    PUSHBUTTON      "Cancel",IDCANCEL,5,211,45,15
+    PUSHBUTTON      "Default",IDC_DEFAULT,62,211,45,15
+    DEFPUSHBUTTON   "OK",IDOK,118,211,45,15
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDFRAME,61,7,45,150
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDFRAME,118,7,45,150
 END
@@ -485,7 +483,7 @@ FONT 8, "MS Sans Serif"
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,305,9,58,19
     CTEXT           "DScaler Version 4.x",IDC_VERSION,0,3,293,9
-    CTEXT           "Copyright (C) 2000, 2001 John Adcock",IDC_STATIC,0,24,
+    CTEXT           "Copyright (C) 2000-2002 John Adcock",IDC_STATIC,0,24,
                     293,10
     GROUPBOX        "Based On",IDC_STATIC,6,144,364,56
     GROUPBOX        "GPL Information && Open Source Policy",IDC_STATIC,5,203,
@@ -1206,7 +1204,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 163
         TOPMARGIN, 7
-        BOTTOMMARGIN, 243
+        BOTTOMMARGIN, 226
     END
 
     IDD_AUDIOEQUALIZER, DIALOG
