--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -708,8 +708,6 @@ BEGIN
     DEFPUSHBUTTON   "&OK",IDOK,6,132,45,15
     PUSHBUTTON      "Cancel",IDCANCEL,57,132,45,15,WS_GROUP
     PUSHBUTTON      "&Default",IDC_DEFAULT,113,132,45,15
-    CONTROL         "&Use DScaler settings for overlay",IDC_CHECK1,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,199,135,119,10
 END
 
 
@@ -900,6 +898,7 @@ BEGIN
         MENUITEM "Filter &Settings",            IDM_SHOW_SCREEN
         MENUITEM SEPARATOR
         MENUITEM "&Video Adjustments ...",      IDM_VIDEOSETTINGS
+        MENUITEM "&Use DScaler Overlay Settings", IDM_USE_DSCALER_OVERLAY
         MENUITEM "&Overlay Adjustments ...",    IDM_OVERLAYSETTINGS
         POPUP "Card &Calibration"
         BEGIN
@@ -915,7 +914,7 @@ BEGIN
 
             MENUITEM "&Stop",                       IDM_STOP_CALIBRATION
         END
-        MENUITEM "Auto Format Detection",       IDM_AUTO_FORMAT
+        MENUITEM "&Auto Format Detection",      IDM_AUTO_FORMAT
         MENUITEM "&Keyboard lock\tCtrl+Shift+L", IDM_KEYBOARDLOCK
     END
     MENUITEM "&Sources",                    IDM_SHOW_SCREEN
