--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -236,25 +236,26 @@ BEGIN
     LTEXT           "",IDC_CPU_TYPE,66,135,125,10
 END
 
-IDD_CHANNELLIST DIALOG DISCARDABLE  22, 17, 335, 183
+IDD_CHANNELLIST DIALOG DISCARDABLE  22, 17, 335, 181
 STYLE DS_MODALFRAME | DS_SETFOREGROUND | DS_3DLOOK | WS_VISIBLE | WS_CAPTION
 CAPTION "Channel List"
 FONT 8, "MS Sans Serif"
 BEGIN
-    LISTBOX         IDC_PROGRAMLIST,2,3,104,153,LBS_NOINTEGRALHEIGHT | 
-                    WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "Setup",IDC_STATIC,116,3,217,51
+    LISTBOX         IDC_PROGRAMLIST,2,3,104,132,LBS_NOINTEGRALHEIGHT | 
+                    LBS_WANTKEYBOARDINPUT | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "Clear List",IDC_CLEAR,1,139,43,13,WS_GROUP
     CONTROL         "Keyed Numbers are channels not postions (US Style)",
-                    IDC_CUTOMCHANNELORDER,"Button",BS_AUTOCHECKBOX | 
+                    IDC_CUSTOMCHANNELORDER,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,124,17,195,8
     COMBOBOX        IDC_COUNTRY,121,35,152,75,CBS_DROPDOWNLIST | WS_VSCROLL | 
                     WS_TABSTOP
     PUSHBUTTON      "Scan",IDC_SCAN,282,35,43,13
+    EDITTEXT        IDC_NAME,173,65,153,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_FREQUENCY,173,84,45,12,ES_AUTOHSCROLL
+    GROUPBOX        "Setup",IDC_STATIC,116,3,217,51
     GROUPBOX        "Details",IDC_STATIC,115,55,218,103
     LTEXT           "Name",IDC_STATIC,121,68,46,8
-    EDITTEXT        IDC_NAME,173,65,153,14,ES_AUTOHSCROLL
     LTEXT           "Frequency",IDC_STATIC,120,86,44,10
-    EDITTEXT        IDC_FREQUENCY,173,84,45,12,ES_AUTOHSCROLL
     LTEXT           "MHz",IDC_STATIC,224,86,16,8
     PUSHBUTTON      "Set",IDC_SETFREQ,252,84,43,12
     SCROLLBAR       IDC_FINETUNE,304,84,22,13
@@ -270,8 +271,8 @@ BEGIN
     PUSHBUTTON      "Remove",IDC_REMOVE,173,139,43,13
     PUSHBUTTON      "Up",IDC_UP,223,139,43,13
     PUSHBUTTON      "Down",IDC_DOWN,273,139,43,13
-    DEFPUSHBUTTON   "OK",IDOK,1,165,43,13,WS_GROUP
-    PUSHBUTTON      "Cancel",IDCANCEL,49,165,43,13,WS_GROUP
+    DEFPUSHBUTTON   "OK",IDOK,1,163,43,13,WS_GROUP
+    PUSHBUTTON      "Cancel",IDCANCEL,49,163,43,13,WS_GROUP
 END
 
 IDD_SPLASHBOX DIALOGEX 0, 0, 145, 192
@@ -1189,7 +1190,7 @@ BEGIN
     BEGIN
         LEFTMARGIN, 1
         RIGHTMARGIN, 333
-        BOTTOMMARGIN, 178
+        BOTTOMMARGIN, 176
     END
 
     IDD_SPLASHBOX, DIALOG
