Changed Channel combo box from editable to read-only (drop down to drop list).

--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -260,7 +260,7 @@ BEGIN
     PUSHBUTTON      "Set",IDC_SETFREQ,252,84,43,12
     SCROLLBAR       IDC_FINETUNE,304,84,22,13
     LTEXT           "Channel",IDC_STATIC,121,104,48,12
-    COMBOBOX        IDC_CHANNEL,174,102,47,107,CBS_DROPDOWN | WS_VSCROLL | 
+    COMBOBOX        IDC_CHANNEL,174,102,47,107,CBS_DROPDOWNLIST | WS_VSCROLL | 
                     WS_TABSTOP
     CONTROL         "Active",IDC_ACTIVE,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,229,102,93,12
