--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -723,9 +723,8 @@ CAPTION "Dialog"
 FONT 8, "MS Sans Serif"
 BEGIN
     CONTROL         "Tree1",IDC_TREESETTINGS_TREE,"SysTreeView32",
-                    TVS_HASBUTTONS | TVS_HASLINES | TVS_LINESATROOT | 
-                    TVS_SHOWSELALWAYS | TVS_TRACKSELECT | WS_BORDER | 
-                    WS_TABSTOP,5,5,90,170
+                    TVS_HASBUTTONS | TVS_HASLINES | TVS_SHOWSELALWAYS | 
+                    TVS_TRACKSELECT | WS_BORDER | WS_TABSTOP,5,5,90,170
     CONTROL         "",IDC_TREESETTINGS_PAGEFRAME,"Static",SS_BLACKFRAME | 
                     NOT WS_VISIBLE,100,5,230,160
     PUSHBUTTON      "OK",IDOK,165,180,50,14
@@ -772,6 +771,14 @@ BEGIN
                     NOT WS_VISIBLE
     COMBOBOX        IDC_TREESETTINGS_GENERIC_CHOOSEFROMLIST,113,1,122,75,
                     CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+END
+
+IDD_TREESETTINGS_NOPROPERTIES DIALOG DISCARDABLE  0, 0, 186, 141
+STYLE DS_CONTROL | WS_CHILD
+FONT 8, "MS Sans Serif"
+BEGIN
+    LTEXT           "This filter does not have any properties",IDC_STATIC,30,
+                    55,130,10
 END
 
 
@@ -1244,7 +1251,7 @@ BEGIN
         MENUITEM "&Stop",                       IDM_DSHOW_STOP
         MENUITEM SEPARATOR
         MENUITEM "&Reset card",                 IDM_RESET
-        MENUITEM "Filter Properties",           65535, GRAYED
+        MENUITEM "Filter properties...",        IDM_DSHOW_FILTERS
     END
 END
 
@@ -1370,6 +1377,14 @@ BEGIN
         RIGHTMARGIN, 350
         TOPMARGIN, 5
         BOTTOMMARGIN, 155
+    END
+
+    IDD_TREESETTINGS_NOPROPERTIES, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 179
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 134
     END
 END
 #endif    // APSTUDIO_INVOKED
