The frequency edit field of the channel list dialog only accepts numbers now.

--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -256,7 +256,7 @@ BEGIN
                     WS_TABSTOP
     PUSHBUTTON      "Scan",IDC_SCAN,282,35,43,13
     EDITTEXT        IDC_NAME,173,65,153,14,ES_AUTOHSCROLL
-    EDITTEXT        IDC_FREQUENCY,173,84,45,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_FREQUENCY,173,84,45,12,ES_AUTOHSCROLL | ES_NUMBER
     GROUPBOX        "Setup",IDC_STATIC,116,3,217,51
     GROUPBOX        "Details",IDC_STATIC,115,55,218,103
     LTEXT           "Name",IDC_STATIC,121,68,46,8
