--- a/DSRend/DSRend.rc
+++ b/DSRend/DSRend.rc
@@ -108,9 +108,9 @@ IDR_DSRENDQUALITYPAGE   REGISTRY DISCARDABLE    "DSRendQualityPage.rgs"
 // Dialog
 //
 
-IDD_DSRENDQUALITYPAGE DIALOGEX 0, 0, 246, 111
+IDD_DSRENDQUALITYPAGE DIALOG DISCARDABLE  0, 0, 246, 111
 STYLE WS_CHILD
-FONT 8, "MS Sans Serif", 0, 0, 0x1
+FONT 8, "MS Sans Serif"
 BEGIN
     GROUPBOX        "Renderer statistics",IDC_STATIC,0,0,125,75
     LTEXT           "Average frame rate:",IDC_STATIC,5,10,70,8
