--- a/DScaler/DScalerRes/DScalerRes.rc
+++ b/DScaler/DScalerRes/DScalerRes.rc
@@ -562,7 +562,7 @@ STYLE WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Advanced Video Flags"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,151,105,50,14
+    DEFPUSHBUTTON   "OK",IDOK,94,105,50,14
     CONTROL         "Automatic Gain Control",IDC_AGC,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,12,13,84,10
     CONTROL         "Adaptive AGC (CRUSH)",IDC_CRUSH,"Button",
@@ -578,7 +578,7 @@ BEGIN
     CONTROL         "Full Luma Range",IDC_LUMA_RANGE,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,12,91,67,10
     CONTROL         "Vertical Filter",IDC_VERT_FILTER,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,12,103,83,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,12,103,64,10
     CONTROL         "Even Luma Decimation ",IDC_E_LUMA_DEC,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,106,13,87,10
     CONTROL         "Odd Luma Decimation ",IDC_O_LUMA_DEC,"Button",
@@ -593,6 +593,7 @@ BEGIN
                     BS_AUTOCHECKBOX | WS_TABSTOP,106,78,83,10
     CONTROL         "Horizontal Filter",IDC_HOR_FILTER,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,106,91,83,10
+    PUSHBUTTON      "Cancel",IDCANCEL,151,105,50,14
 END
 
 IDD_SETTINGS DIALOGEX 0, 0, 245, 178
